# epub_project

./: .gitignore  README.md  start.bat  start.ps1
backend/: .env.example  alembic.ini  pyproject.toml
backend/src/epub_backend/: __init__.py  config.py  main.py
backend/src/epub_backend/api/: __init__.py  books.py  schemas.py
backend/src/epub_backend/db/: __init__.py  models.py  session.py
backend/src/epub_backend/db/migrations/: env.py
backend/src/epub_backend/db/migrations/versions/: 2c25148d0fb7_initial.py  a1b2c3d4e5f6_add_fts5.py
backend/src/epub_backend/reader/: __init__.py  chapter.py  container.py  epub_reader.py  errors.py  models.py  nav.py  opf.py
backend/src/epub_backend/services/: __init__.py  book_service.py  epub_writer.py
backend/src/epub_backend/storage/: __init__.py  filesystem.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py  conftest.py  test_books.py
backend/tests/db/: __init__.py  conftest.py  test_models.py
backend/tests/fixtures/: __init__.py  build_fixtures.py
backend/tests/fixtures/epubs/: cover_meta.epub  epub2_legacy_mime.epub  missing_identifier.epub  missing_identifier_only.epub  valid.epub  with_drm.epub  with_images.epub  with_ncx.epub
backend/tests/reader/: __init__.py  test_epub_reader.py
backend/tests/services/: __init__.py  test_book_service.py
backend/tests/storage/: __init__.py  test_filesystem.py
scripts/: mysql_to_epub.py
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  (+2 more)
(+21 files in other folders)
